# proj-asset-allocation

./: .dockerignore  .gitignore  Dockerfile  ISSUE_buy_orderable_cash.md  README.md  cloudbuild.yaml  main.py  pyproject.toml
docs/: ARCHITECTURE.md  backlog.md  kis_cash_guide.md  refactoring_plan.md
src/: __init__.py  allocation.py  executor.py  logger.py  planner.py  policy.py  pre_execute.py  static_allocation.py
src/auth/: __init__.py  gcp_auth.py  kis_auth.py
src/bigquery/: __init__.py  client.py
src/config/: __init__.py  env.py  helper.py
src/core/: __init__.py  kis_agent.py  koreainvestment.py
src/kis/: client.py  stock_config.py
src/sheets/: client.py
src/slack/: client.py
test/: dump_isa_orderable.py  dump_ppa_orderable.py  test_bigquery_run_marker.py  test_cash_breakdown.py  test_config.py  test_execution_policy.py  test_executor.py  test_fetch_holiday.py  test_fetch_price.py  test_irp_plan.py  test_kis_http.py  test_kis_token_cache.py  test_main_force_flow.py  test_slack_summary.py  verify_cash.py
