[tool.poetry]
name = "asset-allocation"
version = "0.1.0"
description = ""
authors = ["Jaehyeok Choi <francis_bacon@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
oauth2client = "*"
gspread = "*"
pandas = "*"
yfinance = "*"
python-dotenv = "^1.0.1"
xmltodict = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
