[project]
name = "proj-asset-allocation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bt>=1.1.2",
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "xmltodict>=1.0.2",
    "yfinance>=0.2.66",
]
