[project]
name = "proj-asset-allocation"
version = "0.1.0"
description = "KIS API 기반 자동 자산 리밸런싱 시스템 — ISA·연금저축(PPA)·IRP 분기, BigQuery 이력 적재, Slack 통합 발송"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bt>=1.1.2",
    "google-cloud-bigquery>=3.0.0",
    "pyarrow>=15",
    "gspread>=6.2.1",
    "ipykernel>=6.30.1",
    "pandas>=2.3.2",
    "python-dotenv>=1.1.1",
    "xmltodict>=1.0.2",
    "yfinance>=0.2.66",
    "slack-sdk>=3.0.0",
    "pandas-gbq>=0.35.0",
]
